--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,6 +97,11 @@
             <a href="/apiv1/anuncios?precio=100-800&sort=-precio"> http://localhost:3000/apiv1/anuncios?precio=100-800&sort=-precio</a>
           </p>
         </li>
+        <li>
+          <p>En este ejemplo entre listar los que vende, ordenado por precio descendente:
+            <a href="/apiv1/anuncios?estado=vende&sort=-precio"> http://localhost:3000/apiv1/anuncios?estado=vende&sort-precio</a>
+          </p>
+        </li>
         <br>
         <h3>Añadir anuncios:</h3>
         <p>Realizando una petición post a la dirección
